# Copyright (c) 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("All") {
  # In GN, When a target is marked "testonly = true", it must only be depended
  # on by other test-only targets. In crosswalk project we don't need to care
  # which targets are testonly. In order to group all targets into "xwalk_builder"
  # we just set testonly=true.
  testonly = true

  deps = [
    "xwalk:xwalk",
  ]
}
