# Copyright 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("browser") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
    "startup_metric_utils.cc",
    "startup_metric_utils.h",
  ]

  deps = [
    "//base",
    "//base:prefs",
    "//components/version_info",
  ]
}
