# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("browser") {
  sources = [
    "google_pref_names.cc",
    "google_pref_names.h",
    "google_search_metrics.cc",
    "google_search_metrics.h",
    "google_switches.cc",
    "google_switches.h",
    "google_url_tracker.cc",
    "google_url_tracker.h",
    "google_url_tracker_client.cc",
    "google_url_tracker_client.h",
    "google_util.cc",
    "google_util.h",
  ]

  deps = [
    "//base",
    "//components/keyed_service/core",
    "//components/strings",
    "//components/url_fixer",
    "//net",
    "//url",
  ]
}
